# DepthEstimation-SGM

./: CMakeLists.txt  README.md  main_covins.cpp
include/: calc_cost.h  parameters.h  stereo_mapper.h
src/: calc_cost.cu  parameters.cpp  stereo_mapper.cpp
